--- a/sections/rich-text.liquid
+++ b/sections/rich-text.liquid
@@ -35,6 +35,7 @@
     padding-bottom: {{ section.settings.section_padding_y }}px;
     margin-bottom: {{ section.settings.section_margin_x | times: 3 }}px;
     width: {{ section.settings.richtext_width }}vw;
+    max-width: 1920px;
     margin: 0 auto;
   }
 
@@ -62,7 +63,7 @@
       color: {{ block.settings.description_font_color }};
       font-weight: {{ block.settings.description_font_weight }};
       padding: {{ block.settings.description_padding_y }}px 0;
-      line-height: 2;
+      /* line-height: 2; */
     }
 
     /* Content description position  */
@@ -168,12 +169,12 @@
     {
       "type": "range",
       "id": "richtext_width",
-      "min": 50,
+      "min": 30,
       "max": 100,
       "step": 1,
       "unit": "vw",
       "label": "Section Width",
-      "default": 70
+      "default": 60
     },
     {
       "type": "range",
