--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -33,7 +33,8 @@ body {
   font-family: "Poppins", sans-serif;
   /* font-family: "Roboto", sans-serif; */
   font-size: 1.6rem;
-
   border: 0;
   padding: 0;
+  
+  min-height: 100vh;
 }
