--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -11,9 +11,11 @@
   {{ content_for_header }} <!-- Header hook for plugins -->
   {{ 'application.css' | asset_url | stylesheet_tag }}
 
-  {% comment %} AOS style {% endcomment %}
+  {% comment %} AOS style lib {% endcomment %}
   {{ 'aos.css' | asset_url | stylesheet_tag }}
   {% comment %} {{ 'bootstrap.min.css' | asset_url | stylesheet_tag }} {% endcomment %}
+
+
 </head>
 <body>
 
