--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -1,95 +1,303 @@
-<footer class="footer-section bg-light py-3">
-  <div class="container">
-    <div class="row row-cols-{{ section.settings.col_num }}">
-      {% for block in section.blocks %}
-        {% assign item = block.settings %}
-        {% if block.type == 'link_list' %}
-          <div class="col">
-            <h5>{{ item.title }}</h5>
-            {% assign footer_link = item.menu %}
-            <ul class="list-unstyled text-small">
-              {% for link in linklists[footer_link].links %}
-                <li>
-                  <a href="{{ link.url }}">{{ link.title | escape }}</a>
-                </li>
-              {% endfor %}
-            </ul>
-          </div>
-
-        {% else %}
-          <div class="col">
-            <img src="{{ item.logo | img_url: "medium" }}" alt="" class="logo">
-            <h5>{{ item.title }}</h5>
-            <p>{{ item.description }}</p>
-          </div>
-        {% endif %}
-      {% endfor %}
-    </div>
+<footer class="{{ section.id }}">
+  <div class="footer-container">
+    {% comment %} rendering blocks {% endcomment %}
+    {% for block in section.blocks %}
+      {% case block.type %}
+        {% when 'text'%}
+          {% if block.type == 'text' %}
+            <div class="grid-text-{{ section.id }}">
+              {% if block.settings.logo != blnak %}
+                <img src="{{ block.settings.logo | img_url: 'medium' }}" alt="">
+              {% endif %}
+              <h4>{{ block.settings.title }}</h4>
+              <p>{{ block.settings.description }}</p>
+            </div>
+          {% elsif block.type == 'image' %}
+            <div class="grid-image-{{ section.id }}">
+              <img src="{{ block.settings.image_picker | img_url: "large" }}" alt="">
+            </div>
+          {% endif %}
+      {% endcase %}
+      {% comment %} if block type {% endcomment %}
+    {% endfor %}
   </div>
 </footer>
 
-{% schema %}
-{
-  "name": "Footer",
-  "settings": [
-    {
-      "type": "range",
-      "id": "col_num",
-      "default": 3,
-      "min": 2,
-      "max": 4,
-      "label": "Number of columns"
-    }
-  ],
-  "max_blocks": 4,
-  "blocks": [
-    {
-      "type": "link_list",
-      "name": "Navigation",
-      "settings": [
-        {
-          "type": "text",
-          "id": "title",
-          "label": "Title",
-          "default": "Links"
-        },
-        {
-          "type": "link_list",
-          "id": "menu",
-          "label": "Menu"
-        }
-      ]
-    },
-    {
-      "type": "text",
-      "name": "Store details",
-      "settings": [
-        {
-          "type": "image_picker",
-          "id": "logo",
-          "label": "Logo"
-        },
-        {
-          "type": "text",
-          "id": "title",
-          "label": "Heading",
-          "default": "Store information"
-        },
-        {
-          "type": "richtext",
-          "id": "description",
-          "label": "Text"
-        }
-      ]
-    }
-  ]
-}
-{% endschema %}
-
 
 {% style %}
-  .logo {
-    height: 100px;
-    margin-left: 50px;
+
+  /* section settings */
+  .{{ section.id }} {
+    width: 100vw;
+    height: auto;
+    padding: {{ section.settings.footer_padding_y }}px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    background: {{ section.settings.footer_background }};
   }
+  
+  .{{ section.id }} .footer-container {
+    display: grid;
+    grid-template-columns: repeat({{ section.settings.footer_columns }}, 1fr);
+    gap: {{ section.settings.footer_grid_gap }}px;
+    align-items: center;
+    justify-content: space-evenly;
+    width: {{ section.settings.footer_width }}vw;
+  }
+
+
+
+  /* Redering block styles */
+  {% for block in section.blocks %}
+    .grid-text-{{ section.id }} {
+      display: flex;
+      flex-direction: column;
+      align-items: {{ block.settings.text_content_alignment }};
+      justify-content: center;
+      width: {{ block.settings.content_width }}%;
+    }
+
+    .grid-text-{{ section.id }} img {
+      width: {{ block.settings.text_image_size }}px;
+    }
+
+    .grid-text-{{ section.id }} h4 {
+      font-size: {{ block.settings.heading_font_size }}px;
+      color: {{ block.settings.heading_font_color }};
+      font-weight: {{ block.settings.heading_font_weight }};
+    }
+
+    .grid-text-{{ section.id }} p {
+      font-size: {{ block.settings.description_font_size }}px;
+      color: {{ block.settings.description_font_color }};
+      font-weight: {{ block.settings.description_font_weight }};
+    }
+
+    {% if block.settings.content_alignment == 'flex-start' %}
+      .grid-text-{{ section.id }} p {
+        text-align: left;
+      }
+    {% elsif block.settings.content_alignment == 'flex-end' %}
+      .grid-text-{{ section.id }} p {
+          text-align: right;
+        }
+    {% else %}
+      .grid-text-{{ section.id }} p {
+          text-align: center;
+        }
+    {% endif %}
+  {% endfor %}
 {% endstyle %}
+
+
+{% schema %}
+  {
+    "name": "Footer",
+    "settings": [
+      {
+        "type": "color",
+        "id": "footer_background",
+        "label": "Background Color",
+        "default": "#f5f5f5"
+      },
+      {
+        "type": "range",
+        "id": "footer_columns",
+        "min": 1,
+        "max": 4,
+        "step": 1,
+        "unit": "col",
+        "label": "Footer Columns",
+        "default": 1
+      },
+      {
+        "type": "range",
+        "id": "footer_width",
+        "min": 30,
+        "max": 100,
+        "step": 1,
+        "unit": "vw",
+        "label": "Footer Width",
+        "default": 100
+      },
+      {
+        "type": "range",
+        "id": "footer_padding_y",
+        "min": 0,
+        "max": 100,
+        "step": 1,
+        "unit": "px",
+        "label": "Footer Padding Y",
+        "default": 30
+      },
+      {
+        "type": "range",
+        "id": "footer_grid_gap",
+        "min": 0,
+        "max": 100,
+        "step": 1,
+        "unit": "px",
+        "label": "Column Gap",
+        "default": 10
+      }
+    ],
+    "max_blocks": 4,
+    "blocks": [
+      {
+        "type": "text",
+        "name": "Store details",
+        "limit": 1,
+        "settings": [
+          {
+            "type": "select",
+            "id": "text_content_alignment",
+            "label": "Text Content Alignment",
+            "options": [
+              {
+                "value": "flex-start",
+                "label": "Left"
+              },
+              {
+                "value": "center",
+                "label": "Center"
+              },
+              {
+                "value": "flex-end",
+                "label": "Right"
+              }
+            ],
+            "default": "center"
+          },
+          {
+            "type": "range",
+            "id": "content_width",
+            "min": 10,
+            "max": 100,
+            "step": 1,
+            "unit": "%",
+            "label": "Content Width",
+            "default": 100
+          },
+          {
+            "type": "image_picker",
+            "id": "logo",
+            "label": "Logo"
+          },
+          {
+            "type": "range",
+            "id": "text_image_size",
+            "min": 10,
+            "max": 110,
+            "step": 1,
+            "unit": "px",
+            "label": "Image Size",
+            "default": 50
+          },
+          {
+            "type": "text",
+            "id": "title",
+            "label": "Heading",
+            "default": "Store information"
+          },
+          {
+            "type": "select",
+            "id": "heading_font_weight",
+            "label": "Heading Font Weight",
+            "options": [
+              {
+                "value": "100",
+                "label": "Thin"
+              },
+              {
+                "value": "200",
+                "label": "Light"
+              },
+              {
+                "value": "400",
+                "label": "Regular"
+              },
+              {
+                "value": "600",
+                "label": "Bold"
+              }
+            ],
+            "default": "600"
+          },
+          {
+            "type": "range",
+            "id": "heading_font_size",
+            "min": 8,
+            "max": 32,
+            "step": 1,
+            "unit": "px",
+            "label": "Heading Font Size",
+            "default": 16
+          },
+          {
+            "type": "color",
+            "id": "heading_font_color",
+            "label": "Heading Font Color",
+            "default": "#000"
+          },
+          {
+            "type": "richtext",
+            "id": "description",
+            "label": "Text"
+          },
+          {
+            "type": "select",
+            "id": "description_font_weight",
+            "label": "Description Font Weight",
+            "options": [
+              {
+                "value": "100",
+                "label": "Thin"
+              },
+              {
+                "value": "200",
+                "label": "Light"
+              },
+              {
+                "value": "400",
+                "label": "Regular"
+              },
+              {
+                "value": "600",
+                "label": "Bold"
+              }
+            ],
+            "default": "400"
+          },
+          {
+            "type": "range",
+            "id": "description_font_size",
+            "min": 8,
+            "max": 32,
+            "step": 1,
+            "unit": "px",
+            "label": "Description Font Size",
+            "default": 12
+          },
+          {
+            "type": "color",
+            "id": "description_font_color",
+            "label": "Description Font Color",
+            "default": "#000"
+          }
+        ]
+      },
+      {
+        "type": "image",
+        "name": "Image",
+        "settings": [
+          {
+            "type": "image_picker",
+            "id": "image_picker",
+            "label": "Image"
+          }
+        ]
+      }
+    ]
+  }
+{% endschema %}
