--- a/snippets/paginate.liquid
+++ b/snippets/paginate.liquid
@@ -1,7 +1,7 @@
  {% comment %} custom pagination {% endcomment %}
  {% if paginate.pages > 1 %}
-  <nav aria-label="Page navigation">
-    <ul class="pagination justify-content-center">
+  <div class="page-pagination">
+    <ul>
       {% if paginate.previous.is_link %}
         <li class="page-item">
           <a href="{{ paginate.previous.url }}" class="page-link">{{ paginate.previous.title }}</a>
@@ -26,5 +26,26 @@
         </li>
       {% endif %}
     </ul>
-  </nav>
+  </div>
 {% endif %}
+
+{% style %}
+  .page-pagination {
+    width: 100%;
+  }
+
+  .page-pagination ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .page-pagination ul li {
+    list-style: none;
+    padding: 30px 10px;
+  }
+  
+  .page-pagination ul li a {
+    color: #000;
+  }
+{% endstyle %}
