--- a/sections/cart.liquid
+++ b/sections/cart.liquid
@@ -1,8 +1,8 @@
 {% if cart.item_count > 0 %}
   <form action="/cart" method="post" novalidate>
-    <div class="container">
-      <div class="row">
-        <p class="h2 my-5 text-center">Shopping Cart</p>
+    <div class="cart-container">
+      <div>
+        <h2>Shopping Cart</h2>
       </div>
       <div class="my-5 row">
         <form action="/cart" method="POST" class="row" novalidate>
