--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -31,6 +31,8 @@
             </li>
           {% endif %}
         {% endfor %}
+
+        <li><a href="/cart" class="new-cart">Cart</a></li>
       </ul>
 
       {% comment %} search {% endcomment %}
@@ -157,6 +159,31 @@
       border: 1px solid {{ section.settings.search_bar_border_color }};
     }
   {% endif %}
+
+
+  /* cart experiment */
+  .new-cart {
+    position: relative;
+  }
+
+  {% if cart.item_count > 0 %}
+  .new-cart::after {
+    content: "{{ cart.item_count }}";
+    position: absolute;
+    bottom: -5px;
+    /* right: -21px; */
+    background: #000;
+    font-size: 10px;
+    font-weight: 600;
+    color: #fff;
+    width: 16px;
+    height: 15px;
+    text-align: center;
+    border-radius: 3px;
+  }
+  {% endif %}
+
+  /* end cart experiment */
 {% endstyle %}
 
 {% schema %}
