--- a/sections/product.liquid
+++ b/sections/product.liquid
@@ -1,14 +1,11 @@
-hello from product.liquid
-
 {% assign current_product = product.selected_or_first_available_variant %}
 {% assign product_image = current_product.featured_image | default: product.featured_image %}
 
-<div>
+<div class="{{ section.id }}">
   <div class="page-container-{{ section.id }}">
 
+    {% comment %} left content {% endcomment %}
     <div class="image-container">
-      {% comment %} <img src="{{ product_image | img_url: 'large' }}" alt="{{ product_image.alt }}"> {% endcomment %}
-
       {% comment %} image carousel {% endcomment %}
       <div class="carousel" data-carousel>
         <button class="carousel-btn prev" data-carousel-button="prev">&#10096;</button>
@@ -21,12 +18,13 @@ hello from product.liquid
       </div>
     </div>
 
+    {% comment %} right content {% endcomment %}
     <div class="content-container">
-      <h1>{{ product.title }}</h1>
-      <p>{{ current_product.price | money }}</p>
+      <h2>{{ product.title }}</h2>
+      <p class="product-price">{{ current_product.price | money }}</p>
       {% form 'product', product, class:"product--form", id:"add-to-car-form" %}
-        <div class="mb-3">
-          <select name="id" id="product-select" class="form--select">
+        <div class="form-select-container">
+          <select name="id" id="product-select" class="form-select">
             {% for variant in product.variants %}
               {% if variant.available %}
                 <option value="{{ variant.id }}">
@@ -39,18 +37,24 @@ hello from product.liquid
             {% endfor %}
           </select>
         </div>
-        <div>
-          <input type="number" class="form--control" name="quantity" id="quantity" value="1" min="1">
-        </div>
-        <button type="submit" name="add" id="add-to-cart" class="btn btn-secondary btn-lg w-100 rounded-0">Add to cart</button>
 
-        <div class="description">
+        <div class="form-input-container">
+          <input type="number" class="form-input" name="quantity" id="quantity" value="1" min="1">
+        </div>
+
+        <div class="btn-container">
+          <button type="submit" name="add" id="add-to-cart" class="add-to-cart">Add to cart</button>
+
+          {% if section.settings.dynamic-button-checkbox == true %}
+            {{ form | payment_button }}
+          {% endif %}
+        </div>
+
+        <div class="product-description">
           <p>{{ product.description }}</p>
         </div>
 
-        {% if section.settings.dynamic-button-checkbox == true %}
-          {{ form | payment_button }}
-        {% endif %}
+        
 
       {% endform %}
     </div>
@@ -59,26 +63,89 @@ hello from product.liquid
 
 
 {% style %}
+  .{{ section.id }} {
+    width: 100%;
+    max-width: 1920px;
+    padding: {{ section.settings.section_padding_y }}px 0;
+    background: {{ section.settings.background_color }};
+  }
+
+  /* page container */
   .page-container-{{ section.id }} {
     display: flex;
     flex-direction: row;
-    width: 100vw;
+    width: {{ section.settings.section_width}}vw;
+    min-height: 50vh;
+    margin: 0 auto;
   }
 
+  /* image container */
   .page-container-{{ section.id }} .image-container {
-    display: grid;
-    border: 1px solid red;
-    background: orange;
     width: 50%;
   }
 
+  /* content container */
   .page-container-{{ section.id }} .content-container {
-    border: 1px solid black;
-    background: dodgerblue;
+    width: 50%;
+    padding: 0 30px;
+  }
+
+  /* product title */
+  .page-container-{{ section.id }} h2 {
+    font-size: {{ section.settings.product_title_size }}px;
+    font-weight: {{ section.settings.title_font_weight }};
+    color: {{ section.settings.title_color }};
+    padding-bottom: 30px;
+  }
+
+  .page-container-{{ section.id }} .product-price {
+    font-size: {{ section.settings.product_price_size }}px;
+    font-weight: {{ section.settings.price_font_weight }};
+    color: {{ section.settings.price_color }};
+    padding-bottom: 10px;
+  }
+
+  .page-container-{{ section.id }} .product-description {
+    font-size: {{ section.settings.description_size }}px;
+    font-weight: {{ section.settings.description_font_weight }};
+    color: #000;
+  }
+
+  .content-container .form-select-container,
+  .content-container .form-input-container,
+  .content-container .btn-container {
+    padding-bottom: 10px;
+  }
+
+  .btn-container form {
     width: 50%;
   }
 
-  /* carousel */
+  .content-container .form-select,
+  .content-container .form-input,
+  .content-container .add-to-cart {
+    width: 50%;
+    background: #fff;
+    border: 1px solid #ccc;
+    padding: 10px;
+    color: #000;
+  }
+
+  .content-container .add-to-cart {
+    font-size: {{ section.settings.button_font_size }}px;
+    color: {{ section.settings.button_font_color }};
+    font-weight: {{ section.settings.button_font_weight }};
+    background: {{ section.settings.button_background_color }};
+    cursor: pointer;
+    transition: all .15s ease-in-out;
+  }
+
+  .content-container .add-to-cart:hover {
+    color: {{ section.settings.button_hover_font_color }};
+    background: {{ section.settings.button_hover_background_color }};
+  }
+
+  /* carousel start ----------------------------------------------*/
   .page-container-{{ section.id }} .image-container .carousel {
     width: 100%;
     position: relative;
@@ -86,29 +153,39 @@ hello from product.liquid
     height: 100%;
   }
 
+  .carousel > ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+
   .slide {
     position: absolute;
     inset: 0;
     opacity: 0;
+    transition: opacity 200ms ease-in-out;
+    transition-delay: 200ms;
   }
 
-  /* .slide > img {
+  .slide > img {
     display: block;
     width: 100%;
-    height: 50vh;
+    height: 100%;
     object-fit: cover;
     object-position: center;
-  } */
+  }
 
   .active {
     opacity: 1;
+    transition-delay: 0ms;
+    z-index: 1;
   }
 
   .carousel-btn {
     position: absolute;
     background: none;
     border: none;
-    font-size: 40px;
+    font-size: 30px;
     z-index: 2;
     top: 50%;
     transform: translateY(-50%);
@@ -117,17 +194,16 @@ hello from product.liquid
     border-radius: 5px;
     padding: 5px;
     background-color: rgba(0,0,0,.1);
-
+    transition: all 0.15s ease-in-out;
   }
-
-  .carousel-btn:hover,
-  .carousel-btn:focus {
+  /* .carousel-btn:focus, */
+  .carousel-btn:hover {
     color: #fff;
     background-color: rgba(0,0,0,.2);
   }
 
   .carousel-btn:focus {
-    outline: 1px solid #000;
+    /* outline: 1px solid #000; */
   }
 
   .carousel-btn.prev {
@@ -137,24 +213,223 @@ hello from product.liquid
   .carousel-btn.next {
     right: 10px;
   }
+  /* carousel end */
 {% endstyle %}
 
 
 {% schema %}
   {
-    "name": "Producct Page",
+    "name": "Product Page",
     "settings": [
       {
         "type": "checkbox",
         "id": "dynamic-button-checkbox",
         "label": "Enable Dynamic Button",
         "default": false
+      },
+      {
+        "type": "range",
+        "id": "section_width",
+        "min": 30,
+        "max": 100,
+        "step": 1,
+        "unit": "vw",
+        "label": "Section Width",
+        "default": 60
+      },
+      {
+        "type": "range",
+        "id": "section_padding_y",
+        "min": 0,
+        "max": 100,
+        "step": 1,
+        "unit": "px",
+        "label": "Section Padding Y",
+        "default": 10
+      },
+      {
+        "type": "range",
+        "id": "product_title_size",
+        "min": 8,
+        "max": 52,
+        "step": 1,
+        "unit": "px",
+        "label": "Product Title Font Size",
+        "default": 16
+      },
+      {
+        "type": "range",
+        "id": "product_price_size",
+        "min": 8,
+        "max": 52,
+        "step": 1,
+        "unit": "px",
+        "label": "Product Price Font Size",
+        "default": 16
+      },
+      {
+        "type": "range",
+        "id": "button_font_size",
+        "min": 8,
+        "max": 52,
+        "step": 1,
+        "unit": "px",
+        "label": "Add to Cart Font Size",
+        "default": 16
+      },
+      {
+        "type": "range",
+        "id": "description_size",
+        "min": 8,
+        "max": 52,
+        "step": 1,
+        "unit": "px",
+        "label": "Product Description Font Size",
+        "default": 16
+      },
+      {
+        "type": "color",
+        "id": "background_color",
+        "label": "Section Background Color",
+        "default": "#fff"
+      },
+      {
+        "type": "color",
+        "id": "title_color",
+        "label": "Product Title Color",
+        "default": "#000"
+      },
+      {
+        "type": "color",
+        "id": "price_color",
+        "label": "Product Price Color",
+        "default": "#000"
+      },
+      {
+        "type": "color",
+        "id": "button_font_color",
+        "label": "Add to Cart Font Color",
+        "default": "#fff"
+      },
+      {
+        "type": "color",
+        "id": "button_hover_font_color",
+        "label": "Add to Cart Hover Font Color",
+        "default": "#000"
+      },
+      {
+        "type": "color",
+        "id": "button_background_color",
+        "label": "Add to Background Color",
+        "default": "#000"
+      },
+      {
+        "type": "color",
+        "id": "button_hover_background_color",
+        "label": "Add to Cart Hover Background Color",
+        "default": "#fff"
+      },
+      {
+        "type": "select",
+        "id": "title_font_weight",
+        "label": "Title Font Weight",
+        "options": [
+          {
+            "value": "100",
+            "label": "Thin"
+          },
+          {
+            "value": "200",
+            "label": "Light"
+          },
+          {
+            "value": "400",
+            "label": "Regular"
+          },
+          {
+            "value": "600",
+            "label": "Bold"
+          }
+        ],
+        "default": "400"
+      },
+      {
+        "type": "select",
+        "id": "price_font_weight",
+        "label": "Product Price Font Weight",
+        "options": [
+          {
+            "value": "100",
+            "label": "Thin"
+          },
+          {
+            "value": "200",
+            "label": "Light"
+          },
+          {
+            "value": "400",
+            "label": "Regular"
+          },
+          {
+            "value": "600",
+            "label": "Bold"
+          }
+        ],
+        "default": "400"
+      },
+      {
+        "type": "select",
+        "id": "button_font_weight",
+        "label": "Add to Cart Font Weight",
+        "options": [
+          {
+            "value": "100",
+            "label": "Thin"
+          },
+          {
+            "value": "200",
+            "label": "Light"
+          },
+          {
+            "value": "400",
+            "label": "Regular"
+          },
+          {
+            "value": "600",
+            "label": "Bold"
+          }
+        ],
+        "default": "400"
+      },
+      {
+        "type": "select",
+        "id": "description_font_weight",
+        "label": "Add to Cart Font Weight",
+        "options": [
+          {
+            "value": "100",
+            "label": "Thin"
+          },
+          {
+            "value": "200",
+            "label": "Light"
+          },
+          {
+            "value": "400",
+            "label": "Regular"
+          },
+          {
+            "value": "600",
+            "label": "Bold"
+          }
+        ],
+        "default": "400"
       }
     ]
   }
 {% endschema %}
 
-
+{% comment %} carousel script {% endcomment %}
 <script>
   const list = document.querySelectorAll('.slide');
   let listArr = Array.from(list);
